--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-sm-6 col-md-6">
-					<p class="bold text-left"><i class="fa fa-arrow-circle-left"></i> Kembali Ketutorial Ini</p>
+					<p class="bold text-left"><i class="fa fa-arrow-circle-left"></i> Selamat</p>
 					</div>
 					<div class="col-sm-6 col-md-6">
 					<p class="bold text-right">Ketutorial Sebelumya <i class="fa fa-arrow-circle-right"></i></p>
