--- a/gmaps-lib/create-google-maps.html
+++ b/gmaps-lib/create-google-maps.html
@@ -6,7 +6,7 @@
     <meta name="Demo tutoral by www.java-sc.web.id" content="">
     <meta name="Hady Eka Saputra" content="">
     <title>JSC - Demo Google Maps API</title>
-    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="../css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <script src="https://use.fontawesome.com/2642b88c56.js"></script>
     <link href="../css/style.css" rel="stylesheet">
 	<link id="t-colors" href="../css/blue.css" rel="stylesheet">
