--- a/gmaps-lib/create-google-maps.html
+++ b/gmaps-lib/create-google-maps.html
@@ -6,6 +6,7 @@
     <meta name="Demo tutoral by www.java-sc.web.id" content="">
     <meta name="Hady Eka Saputra" content="">
     <title>JSC - Demo Google Maps API</title>
+    <link href='http://www.java-sc.web.id/favicon.ico' rel='icon' type='image/x-icon'/>
     <link href="../css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <script src="https://use.fontawesome.com/2642b88c56.js"></script>
     <link href="../css/style.css" rel="stylesheet">
@@ -22,7 +23,7 @@
 		}
     </script>
 	</head>
-<body id="page-top" data-spy="scroll" data-target=".navbar-custom" onload="initialize()">
+<body id="page-top" data-spy="scroll" data-target=".navbar-custom" onload="initMap()">
 
 <div id="wrapper">
 	
