--- a/gmaps-lib/create-google-maps.html
+++ b/gmaps-lib/create-google-maps.html
@@ -57,7 +57,7 @@
 									</div>
 									<div class="panel-body">
 									<div>
-										<div id="map"></div>
+										<div id="map" style="height:100%"></div>
 									</div>
 								</div>
 							</div>				
