--- a/gmaps-lib/create-animation-in-marker-three.html
+++ b/gmaps-lib/create-animation-in-marker-three.html
@@ -94,12 +94,12 @@
 									<center><h3 class="panel-title"><span class="fa fa-pencil-square-o"></span>Membuat Animasi Pada Marker Google Maps - One</h3></center>
 							</div>
 									<div class="panel-body" id="map"></div>
-							</div>				
-						  <div class="col-md-12">
-						  <button id="tambah">Tambah Marker</button>
-              <button id="animasi">Event Bounce</button>
-              <button id="berhenti">Stop</button>
+									<div class="col-md-12">
+						  	<button class="btn btn-primary" id="tambah">Tambah Marker</button>
+					              	<button class="btn btn-primary" id="animasi">Event Bounce</button>
+					        	 <button class="btn btn-primary" id="berhenti">Stop</button>
 						  </div>
+							</div>				
 						</div>
 						</div>
 					</div>					
