--- a/gmaps-lib/create-animation-in-marker-three.html
+++ b/gmaps-lib/create-animation-in-marker-three.html
@@ -93,7 +93,8 @@
 							<div class="panel-heading">
 									<center><h3 class="panel-title"><span class="fa fa-pencil-square-o"></span>Membuat Animasi Pada Marker Google Maps - One</h3></center>
 							</div>
-									<div class="panel-body" id="map">
+									<div class="panel-body" id="map"></div>
+									<div class="panel-footer">
 										<div class="col-md-12">
 										  	<button class="btn btn-primary" id="tambah">Tambah Marker</button>
 									              	<button class="btn btn-primary" id="animasi">Event Bounce</button>
