--- a/gmaps-lib/create-animation-in-marker-three.html
+++ b/gmaps-lib/create-animation-in-marker-three.html
@@ -95,10 +95,12 @@
 							</div>
 									<div class="panel-body" id="map"></div>
 									<div class="panel-footer">
+										<div class="row">
 										<div class="col-md-12">
 										  	<button class="btn btn-primary" id="tambah">Tambah Marker</button>
 									              	<button class="btn btn-primary" id="animasi">Event Bounce</button>
 									        	 <button class="btn btn-primary" id="berhenti">Stop</button>
+										  </div>
 										  </div>
 									</div>
 							</div>				
