--- a/gmaps-lib/create-animation-in-marker-three.html
+++ b/gmaps-lib/create-animation-in-marker-three.html
@@ -91,7 +91,7 @@
 						
 							<div class="panel panel-skin" style="max-height: 100;">
 							<div class="panel-heading">
-									<center><h3 class="panel-title"><span class="fa fa-pencil-square-o"></span>Membuat Animasi Pada Marker Google Maps - One</h3></center>
+									<center><h3 class="panel-title"><span class="fa fa-pencil-square-o"></span>Membuat Animasi Pada Marker Google Maps - Three</h3></center>
 							</div>
 									<div class="panel-body" id="map"></div>
 									<div class="panel-footer">
