--- a/gmaps-lib/create-animation-in-marker-two.html
+++ b/gmaps-lib/create-animation-in-marker-two.html
@@ -72,7 +72,7 @@ var map , penanda;
 						
 							<div class="panel panel-skin" style="max-height: 100;">
 							<div class="panel-heading">
-									<center><h3 class="panel-title"><span class="fa fa-pencil-square-o"></span>Membuat Animasi Pada Marker Google Maps - One</h3></center>
+									<center><h3 class="panel-title"><span class="fa fa-pencil-square-o"></span>Membuat Animasi Pada Marker Google Maps - Two</h3></center>
 							</div>
 									<div class="panel-body" id="map"></div>
 							</div>				
