--- a/gmaps-lib/remove-background-infowindow.html
+++ b/gmaps-lib/remove-background-infowindow.html
@@ -9,6 +9,7 @@
     <link href="../css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href='http://www.java-sc.web.id/favicon.ico' rel='icon' type='image/x-icon'/>
     <script src="https://use.fontawesome.com/2642b88c56.js"></script>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js">
     <link href="../css/style.css" rel="stylesheet">
 	<link id="t-colors" href="../css/blue.css" rel="stylesheet">
 	<style type="text/css">
