--- a/gmaps-lib/create-infobox.html
+++ b/gmaps-lib/create-infobox.html
@@ -11,7 +11,7 @@
     <script src="https://use.fontawesome.com/2642b88c56.js"></script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDKN8E3VeLkA5mgeENXiKp9tjhPlQ95TPc">
     </script>
-    <script src="../js/infobox.js"></script>
+    <script src="infobox.js"></script>
     <link href="../css/style.css" rel="stylesheet">
 	<link id="t-colors" href="../css/blue.css" rel="stylesheet">
 	<style type="text/css">
