--- a/gmaps-lib/click-to-add-marker.html
+++ b/gmaps-lib/click-to-add-marker.html
@@ -73,6 +73,16 @@ function initMap() {
 							<div class="panel-heading">
 									<center><h3 class="panel-title"><span class="fa fa-pencil-square-o"></span>Menambah Marker Dengan Fungsi Click Pada Google Maps</h3></center>
 							</div>
+							<script type="text/javascript">
+							    google_ad_client = "ca-pub-1241834512450430";
+							    google_ad_slot = "2843387902";
+							    google_ad_width = 728;
+							    google_ad_height = 90;
+							</script>
+							<!-- Maps-Ads -->
+							<script type="text/javascript"
+							src="//pagead2.googlesyndication.com/pagead/show_ads.js">
+							</script>
 									<div class="panel-body" id="map"></div>
 							</div>				
 						
