--- a/mycv/index.html
+++ b/mycv/index.html
@@ -30,7 +30,7 @@
         <link rel="stylesheet" type="text/css" href="css/jquery.mCustomScrollbar.css" />
        	
         <!-- CSS | Colors -->
-        <link rel="stylesheet" type="text/css" href="css/colors/blue.css" id="colors-style" />
+        <link rel="stylesheet" type="text/css" href="css/blue.css" id="colors-style" />
         <link rel="stylesheet" type="text/css" href="css/switcher.css" />
         
         <!-- CSS | Style -->
